include_HEADERS = \
	internal/X3DField.h \
    internal/config.h \
	internal/errors.h \
	internal/Node.h \
	internal/Browser.h \
	internal/SF.h \
	internal/MF.h \
    internal/Route.h \
	internal/InitField.h \
	internal/InField.h \
	internal/OutField.h \
	internal/InOutField.h \
	internal/Event.h \
    internal/Profile.h \
    internal/Component.h \
    internal/NodeDef.h \
    internal/FieldDef.h \
    internal/FieldIterator.h \
	internal/builtin.h \
	internal/SAIField.h \
	internal/SFBool.h \
	internal/SFColor.h \
	internal/SFDouble.h \
	internal/SFFloat.h \
	internal/SFImage.h \
	internal/SFInt32.h \
	internal/SFMatrix.h \
	internal/SFNode.h \
	internal/SFRotation.h \
	internal/SFString.h \
	internal/SFTime.h \
	internal/SFVec.h \
    internal/World.h \
    internal/Prototype.h \
    internal/ProtoInst.h \
    internal/ProtoField.h \
	internal/ProtoFieldDef.h \
	internal/Connect.h \
    internal/metadata.h \
	Core/X3DNode.h \
	Core/X3DChildNode.h \
    Core/X3DBindableNode.h \
    Core/X3DInfoNode.h \
    Core/X3DMetadataObject.h \
    Core/X3DPrototypeInstance.h \
    Core/X3DSensorNode.h \
    Core/MetadataDouble.h \
    Core/MetadataFloat.h \
    Core/MetadataInteger.h \
    Core/MetadataSet.h \
    Core/MetadataString.h \
    Core/WorldInfo.h \
    Time/X3DTimeDependentNode.h \
    Time/TimeSensor.h \
    Test/TestSuite.h \
    Test/TestNode.h \
    Test/Expect.h \
	Interpolation/X3DInterpolatorNode.h \
	Interpolation/PositionInterpolator.h \
	Interpolation/PositionInterpolator2D.h \
	Interpolation/ScalarInterpolator.h \
	Interpolation/CoordinateInterpolator.h \
	Interpolation/CoordinateInterpolator2D.h \
	Interpolation/EaseInEaseOut.h \
	Grouping/X3DBoundedObject.h \
	Grouping/X3DGroupingNode.h \
	Grouping/Group.h \
	Grouping/StaticGroup.h
