AM_CPPFLAGS = $(DEPS_CFLAGS)
lib_LTLIBRARIES = libsimpleX3D.la
libsimpleX3D_la_SOURCES = \
    internal/errors.cc \
    internal/X3DField.cc \
	internal/Node.cc \
	internal/SFImage.cc \
    internal/SFNode.cc \
	internal/Browser.cc \
    internal/Route.cc \
    internal/Profile.cc \
    internal/Component.cc \
    internal/NodeDef.cc \
    internal/FieldDef.cc \
    internal/SAIField.cc \
    internal/FieldIterator.cc \
    internal/World.cc \
    internal/Prototype.cc \
    internal/ProtoInst.cc \
	internal/builtin.cc \
	Core/X3DNode.cc \
	Core/MetadataSet.cc \
	Core/MetadataString.cc \
    Test/TestSuite.cc \
    Test/TestNode.cc \
    Test/Expect.cc \
	Time/TimeSensor.cc \
	Interpolation/X3DInterpolatorNode.cc \
	Interpolation/PositionInterpolator.cc \
	Interpolation/EaseInEaseOut.cc
libsimpleX3D_la_LIBADD = $(DEPS_LIBS)
include_HEADERS = \
	internal/X3DField.h \
    internal/config.h \
	internal/errors.h \
	internal/Node.h \
	internal/Browser.h \
	internal/SF.h \
	internal/MF.h \
    internal/Route.h \
	internal/InitField.h \
	internal/InField.h \
	internal/OutField.h \
	internal/InOutField.h \
	internal/Event.h \
    internal/Profile.h \
    internal/Component.h \
    internal/NodeDef.h \
    internal/FieldDef.h \
    internal/FieldIterator.h \
    internal/NodeIterator.h \
	internal/builtin.h \
	internal/SAIField.h \
	internal/SFBool.h \
	internal/SFColor.h \
	internal/SFDouble.h \
	internal/SFFloat.h \
	internal/SFImage.h \
	internal/SFInt32.h \
	internal/SFMatrix.h \
	internal/SFNode.h \
	internal/SFRotation.h \
	internal/SFString.h \
	internal/SFTime.h \
	internal/SFVec.h \
    internal/World.h \
    internal/Prototype.h \
    internal/ProtoInst.h \
    internal/ProtoField.h \
	internal/ProtoFieldDef.h \
	internal/Connect.h \
    internal/metadata.h \
	Core/X3DNode.h \
	Core/X3DChildNode.h \
    Core/X3DBindableNode.h \
    Core/X3DInfoNode.h \
    Core/X3DMetadataObject.h \
    Core/X3DPrototypeInstance.h \
    Core/X3DSensorNode.h \
    Core/MetadataDouble.h \
    Core/MetadataFloat.h \
    Core/MetadataInteger.h \
    Core/MetadataSet.h \
    Core/MetadataString.h \
    Core/WorldInfo.h \
    Time/X3DTimeDependentNode.h \
    Time/TimeSensor.h \
    Test/TestSuite.h \
    Test/TestNode.h \
    Test/Expect.h \
	Interpolation/X3DInterpolatorNode.h \
	Interpolation/PositionInterpolator.h \
	Interpolation/EaseInEaseOut.h
