SUBDIRS = \
	internal \
	Core \
	Test \
	Time \
	Interpolation \
	Grouping
lib_LTLIBRARIES = libsimpleX3D.la
libsimpleX3D_la_SOURCES = 
libsimpleX3D_la_LIBADD = \
	$(DEPS_LIBS) \
	internal/libinternal.la \
	Core/libCore.la \
	Test/libTest.la \
	Time/libTime.la \
	Interpolation/libInterpolation.la \
	Grouping/libGrouping.la
