coredir = $(includedir)/simplex3d/Core
core_HEADERS = \
	X3DNode.h \
	X3DChildNode.h \
    X3DBindableNode.h \
    X3DInfoNode.h \
    X3DMetadataObject.h \
    X3DPrototypeInstance.h \
    X3DSensorNode.h \
    MetadataDouble.h \
    MetadataFloat.h \
    MetadataInteger.h \
    MetadataSet.h \
    MetadataString.h \
    WorldInfo.h
