internaldir = $(includedir)/simplex3d/internal
internal_HEADERS = \
	X3DField.h \
    config.h \
	errors.h \
	Node.h \
	Browser.h \
	SF.h \
	MF.h \
    Route.h \
	InitField.h \
	InField.h \
	OutField.h \
	InOutField.h \
	Event.h \
    Profile.h \
    Component.h \
    NodeDef.h \
    FieldDef.h \
    FieldIterator.h \
	builtin.h \
	SAIField.h \
	SFBool.h \
	SFColor.h \
	SFDouble.h \
	SFFloat.h \
	SFImage.h \
	SFInt32.h \
	SFMatrix.h \
	SFNode.h \
	SFRotation.h \
	SFString.h \
	SFTime.h \
	SFVec.h \
    World.h \
    Prototype.h \
    ProtoInst.h \
    ProtoField.h \
	ProtoFieldDef.h \
	Connect.h \
    metadata.h \
	Plugin.h \
	NodeFactory.h
