AM_CPPFLAGS = $(DEPS_CFLAGS) -I$(top_srcdir)/include
noinst_LTLIBRARIES = libInterpolation.la
libInterpolation_la_SOURCES = \
	X3DInterpolatorNode.cc \
	PositionInterpolator.cc \
	PositionInterpolator2D.cc \
	ScalarInterpolator.cc \
	CoordinateInterpolator.cc \
	CoordinateInterpolator2D.cc \
	EaseInEaseOut.cc
