AM_CPPFLAGS = $(DEPS_CFLAGS) -I$(top_srcdir)/include
noinst_LTLIBRARIES = libinternal.la
libinternal_la_SOURCES = \
    errors.cc \
    X3DField.cc \
	Node.cc \
	SFImage.cc \
    SFNode.cc \
	Browser.cc \
    Route.cc \
    Profile.cc \
    Component.cc \
    NodeDef.cc \
    FieldDef.cc \
    SAIField.cc \
    FieldIterator.cc \
    World.cc \
    Prototype.cc \
    ProtoInst.cc \
	Plugin.cc \
	builtin.cc
